PUG-067: Corrige Academic;